update logic part of 1.21.8